feat: move getting radar data to separete route
