# src-be/app/controller/radar.controller.ts
@@ -1,9 +1,10 @@
+import { RadarConfig } from 'app/model/radar-config';
 import {
 	Body,
 	Controller,
 	Get,
 	Path,
-	Put,
+	Post,
 	Route
 } from 'tsoa';
 import { Inject } from '../ioc';
@@ -11,17 +12,16 @@ import { RadarEntity } from '../model/radar-entity';
 import { RadarsService } from '../service/radars.service';
 
 @Route('api/radars')
-
 export class RadarsController extends Controller {
 	@Inject() private radarsService!: RadarsService;
 
-	@Get('{entityId}')
-	public async getRadar(@Path() entityId: string): Promise<RadarEntity> {
-		return this.radarsService.getRadarById(entityId);
+	@Get('{radarId}')
+	public async getRadar(@Path() radarId: string): Promise<RadarEntity[]> {
+		return this.radarsService.getRadarsById(radarId);
 	}
 
-	@Put('{entityId}')
-	public async updateRadar(@Path() entityId: string, @Body() radar: RadarEntity): Promise<RadarEntity> {
-		return this.radarsService.updateRadarById(entityId, radar);
+	@Post('{radarId}')
+	public async updateRadar(@Path() radarId: string, @Body() config: RadarConfig): Promise<RadarEntity> {
+		return this.radarsService.createRadar(config, radarId);
 	}
 }
